         function series.
  - NEW: you can now directly compare individuals and populations in python.
  - CHG: carray is no longer a standalone type. (You can not create it in python)
  - NEW: Complete test cases for carray, individual, population, operator, mating
  - NEW: under DBG_MATING, size of each family is outputed as pop.dvars().famSizes

version 0.6.11 - (Rev 119) - Jan 19, 2006
  - DOC: add examples of penetrance operators to the reference manual.
  - DOC: document using pyOperator to build pure-python operators
  - NEW: check return value of pyPenetrance function to be within [0,1]
  - NEW: add operator continueIf, in addition to terminateIf
  - NEW: add 's' behavior to operator pause, which will invoke an interactive
         python shell. Current population is by default exposed to the main 
         dictionary as variable 'pop. This can be controled by parameter 
         exposePop and popName.
  - TST: add test case test_opPause.py
  - NEW: add name parameter to population::exposeInfo and population::exposeAffectedness
  - NEW: add subPop parameter to population::removeIndividual
  - DOC: add full member function of population object list to reference manual
  - DOC: add genotypic structure function list to reference manual
  - DOC: add individual function list to refernce manual
  - CHG: rename basicPentrance, basicSelector and basicQuanTrait to 
         mapPenetrance etc
  - NEW: add multi-locus support to mapPenetrance, maPenetrance (and selector,
         quantrait) except for locus, you can specify loci, and a longer map 
         or array of values.
  - NEW: pyOperator can now be a during-mating operator. Pass a python function
         func(pop, offspring, dad, mom, param) and set stage=DuringMating will do.
  - BUG: fix another memory leak problem when an internal population is exposed
  - NEW: improve the efficiency of dynamic type finding of population and 
         individual Decent performance boost for pyOperator, especially to 