@@ -1,2 +1,2 @@
 SIMUPOP_VER = "snapshot"
-SIMUPOP_REV = "126:141M"
+SIMUPOP_REV = "126:146M"
