@@ -35,6 +35,8 @@ version 0.6.12 - available as snapshot
   - CHG: carray is no longer a standalone type. (You can not create it in python)
   - NEW: Complete test cases for carray, individual, population, operator, mating
   - NEW: under DBG_MATING, size of each family is outputed as pop.dvars().famSizes
+  - NEW: initByFreq now recognize binary library and set 0,1 instead of 1,2,...
+  - NEW: Complete test cases for initializers.
 
 version 0.6.11 - (Rev 119) - Jan 19, 2006
   - DOC: add examples of penetrance operators to the reference manual.
